style: home page center and added text. Loader page. Z-index of poppy to ensure close button works

--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,13 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
+  height: 100vh;
+}
+
+#app {
+  height: 100vh;
+  /* display: flex; */
+  /* align-items: center */
 }
 
 label {
@@ -28,6 +35,7 @@ form div {
 
 #logo {
   width: 500px;
+  margin: 30px
 }
 
 .poppy {
@@ -37,6 +45,7 @@ form div {
   /* height: 35%; */
   padding: 8px;
   /* box-shadow: 1px 1px 3px grey; */
+  z-index: 99;
 }
 
 #popuptext {
@@ -74,6 +83,7 @@ form div {
 
 .startPage {
   display: flex;
+  height: 75vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -82,6 +92,30 @@ form div {
 .startPage img {
   max-width: 100%;
   height: auto;
+  margin: 20px;
+}
+
+#mission {
+  /* background-color: pink; */
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 35px;
+  font-style: italic;
+  font-size: 22px;
+  color: #32936f;
+  text-align: center;
+
+
+}
+
+@media screen and (max-width: 400px) {
+  #mission {
+    font-size: 12px;
+  }
+
+  #logo {
+    width: 80vw
+  }
 }
 
 /* .button {
@@ -178,6 +212,16 @@ tr:nth-child(odd) {
   align-items: center;
 }
 
+#loading-text h1 {
+  margin-top: 20px;
+  font-size: 14px
+}
+
+#thankYou {
+  font-style: italic;
+  color: #32936fc6
+}
+
 #disclaimer-text {
   display: flex;
   justify-content: center;
@@ -217,11 +261,6 @@ tr:nth-child(odd) {
 
 }
 
-/* .adminContainer{
-  background-color: rgba(255, 255, 255, 0.502);
-
-}*/
-
 .singleCheckboxContainer{
   margin-left: 20px;
   margin-right: 20px;
@@ -229,68 +268,36 @@ tr:nth-child(odd) {
   border-radius: 4px
 }
 
-
-/* .singleCheckboxContainer {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+#loader-container{
+  height: 75vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.singleCheckboxContainer input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
+.spinnyLoaderContainer {
+  display: flex;
+  flex-direction: row;
 }
 
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: rgb(255, 255, 255);
-}
-.singleCheckboxContainer input:checked ~ .checkmark {
-  background-color: #F517BC;
+.customLoader {
+  border: 7px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 7px solid #32936fc6;
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 1s linear infinite; /* Safari */
+  animation: spin 1s linear infinite;
 }
 
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
 }
 
-.singleCheckboxContainer input:checked ~ .checkmark:after {
-  display: block;
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
-
-.singleCheckboxContainer .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-} */
-
-
-/*
-.checkbox input:checked ~ .checkmark {
-  background-color: #FFC300;
-  margin-left: 20px
-} */
-
-
 
